--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
     width : 100%;
     height : 100vh;
     background : lightgreen ;
-    background : linear-gradient(rgba(0, 0, 0, 0.5),rgba(0,0,0,0.5)),url("/images/sofa2.webp");
+    background : linear-gradient(rgba(0, 0, 0, 0.5),rgba(0,0,0,0.5)),url("/images/background.jpg");
     background-size : cover ;
 
 }
