--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ body{
 .banner-area{
     width : 100%;
     height : 100vh;
-    background : lightgreen ;
     background : linear-gradient(rgba(0, 0, 0, 0.5),rgba(0,0,0,0.5)),url("/images/background.jpg");
     background-size : cover ;
 
@@ -28,7 +27,7 @@ body{
 }
 .content h1{
     font-size : 70px ;
-    color : #c8d8e4 ;
+    color : #97a9b8 ;
     font-family : serif ;
 }
 
