--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,17 @@ body{
 #change-text{
     content : "" ;
 }
+
+.map-responsive{
+    overflow:hidden;
+    padding-bottom:50%;
+    position:relative;
+    height:100;
+}
+.map-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
