--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body{
     font-size : 70px ;
     color : #97a9b8 ;
     font-family : serif ;
+    text-shadow : 2px 2px 3px #2b6777 ;
 }
 
 .content p{
