Marquee Details and copyright reserved properties added..

--- a/css/style.css
+++ b/css/style.css
@@ -148,4 +148,5 @@ body{
     letter-spacing: 2px;
     font-family: 'Times New Roman', Times, serif;
     font-style: bold;
+    text-shadow: 3px 3px 3px #2b6777;
 }
