--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,7 @@ body{
     
 }
 .ic{
+  
     
 }
 .ic:hover{
@@ -160,17 +161,23 @@ body{
     text-shadow: 3px 3px 3px #2b6777;
 }
 
+/* style for floating whatsapp icon */
+
 .whatsapp {
     position: fixed;
-    right: 0px;
+    right: 1%;
     top: 90%;
     padding-right: 1rem;
 }
 .whatsapp h5 {
     color: white;
     background: #20b20f;
-    padding: 12px;
-    border-radius: 10px;
+    padding: 10px;
+    border-radius: 12px;
+}
+
+.whatsapp h5:hover {
+  background:#067751;
 }
 
 /*---- style for gallery ---- */
@@ -199,7 +206,7 @@ body{
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: auto;
     background: linear-gradient(#606b7d,#2b6777);;
   }
