--- Auto-Git Commit ---

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,10 @@ body{
 }
 #change-text{
     content: "" ;
- 
+   
+    align-content: stretch;
+    font-size: larger;
+    text-shadow: 2px 2px 3px #7b188f;
 }
 
 .map-responsive{
@@ -86,11 +89,18 @@ body{
 
 .gallery img{
     transition: all .3s ease-in-out;
-    
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
 }
 
 .gallery img:hover{
     transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
 }
 
 .photo-gallery {
@@ -270,13 +280,25 @@ body{
     border-radius: 0 3px 3px 0;
     user-select: none;
     -webkit-user-select: none;
-  }
+    -webkit-transition: 0.6s ease;
+    -moz-transition: 0.6s ease;
+    -ms-transition: 0.6s ease;
+    -o-transition: 0.6s ease;
+    -webkit-border-radius: 0 3px 3px 0;
+    -moz-border-radius: 0 3px 3px 0;
+    -ms-border-radius: 0 3px 3px 0;
+    -o-border-radius: 0 3px 3px 0;
+}
   
   /* Position the "next button" to the right */
   .next {
     right: 0;
     border-radius: 3px 0 0 3px;
-  }
+    -webkit-border-radius: 3px 0 0 3px;
+    -moz-border-radius: 3px 0 0 3px;
+    -ms-border-radius: 3px 0 0 3px;
+    -o-border-radius: 3px 0 0 3px;
+}
   
   /* On hover, add a black background color with a little bit see-through */
   .prev:hover,
