Some malayalam contents added for replacing

--- a/css/style.css
+++ b/css/style.css
@@ -174,7 +174,7 @@ body{
     letter-spacing: 2px;
     font-family: 'Times New Roman', Times, serif;
     font-style: bold;
-    text-shadow: 3px 3px 3px #2b6777;
+    text-shadow: 3px 3px 3px #97a9b8;
 }
 
 /* style for floating whatsapp icon */
