--- a/css/style.css
+++ b/css/style.css
@@ -1,323 +1,323 @@
-*{
-    padding : 0 ;
-    margin : 0 ;
-    box-sizing : border-box ;
-
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-body{
-    font-family : verdana ;
-    display : grid ;
-    place-items : center ;
-    color : #fff ;
+body {
+  font-family: verdana;
+  display: grid;
+  place-items: center;
+  color: #fff;
 }
 
-.banner-area{
-    width : 100%;
-    height : 100vh;
-    background : linear-gradient(rgba(0, 0, 0, 0.5),rgba(0,0,0,0.5)),url("/images/background.jpg");
-    background-size : cover ;
-
-}
-.content-area{
-    height : 100% ;
-    display : flex ;
-    justify-content : center ;
-    align-items : center ;
-}
-.content{
-    text-align : center ;
-}
-.content h1{
-    font-size : 70px ;
-    color : #97a9b8 ;
-    font-family : serif ;
-    text-shadow : 2px 2px 3px #2b6777 ;
+.banner-area {
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/background.jpg");
+  background-size: cover;
 }
 
-.content p{
-    font-size : 25px ;
-    color : #ddd ;
+.content-area {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.content .btn{
-    border-color:#c8d8e4 ;
-    color : #c8d8e4 ;
+.content {
+  text-align: center;
 }
+
+.content h1 {
+  font-size: 70px;
+  color: #97a9b8;
+  font-family: serif;
+  text-shadow: 2px 2px 3px #2b6777;
+}
+
+.content p {
+  font-size: 25px;
+  color: #ddd;
+}
+
+.content .btn {
+  border-color: #c8d8e4;
+  color: #c8d8e4;
+}
+
 .btn:hover {
-    background-color: #97a9b8;
-    border-color: #c8d8e4;
-    color: #fff;
+  background-color: #97a9b8;
+  border-color: #c8d8e4;
+  color: #fff;
 }
 
-
-
-.clr-prim{
+.clr-prim {
   background-image: linear-gradient(to bottom, #356a6f, #386670, #3d6270, #425e6e, #475a6b, #465a6b, #465a6c, #455a6c, #3d5e70, #346271, #2a6571, #21696f);
-    
 }
 
-.change-text-area{
-    text-align : center ;
-    
-}
-#change-text{
-    content: "" ;
-   
-    align-content: stretch;
-    font-size: larger;
-    text-shadow: 2px 2px 3px #7b188f;
+.change-text-area {
+  text-align: center;
 }
 
-.map-responsive{
-    overflow:hidden;
-    padding-bottom:50%;
-    position:relative;
-    height:100;
-}
-.map-responsive iframe{
-    left:0;
-    top:0;
-    height:100%;
-    width:100%;
-    position:absolute;
+#change-text {
+  content: "";
+  align-content: stretch;
+  font-size: larger;
+  text-shadow: 2px 2px 3px #7b188f;
 }
 
-.wave{
-    background-color : #c8d8e4 ;
+.wave {
+  background-color: #c8d8e4;
 }
 
-.gallery img{
-    transition: all .3s ease-in-out;
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    -ms-transition: all .3s ease-in-out;
-    -o-transition: all .3s ease-in-out;
+.text{
+  color: #000;
 }
 
-.gallery img:hover{
-    transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -ms-transform: scale(1.1);
-    -o-transform: scale(1.1);
+.gallery img {
+  transition: all .3s ease-in-out;
+  -webkit-transition: all .3s ease-in-out;
+  -moz-transition: all .3s ease-in-out;
+  -ms-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+}
+
+.gallery img:hover {
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
 }
 
 .photo-gallery {
-    color:#97a9b8;
-    background-color:#fff;
-  }
-  
-  .photo-gallery p {
-    color:#7d8285;
-  }
-  
+  color: #97a9b8;
+  background-color: #fff;
+}
+
+.photo-gallery p {
+  color: #7d8285;
+}
+
+.photo-gallery h2 {
+  font-weight: bold;
+  color: #97a9b8;
+  margin-bottom: 40px;
+  padding-top: 40px;
+}
+
+@media (max-width:767px) {
   .photo-gallery h2 {
-    font-weight:bold;
-    color: #97a9b8;
-    margin-bottom:40px;
-    padding-top:40px;
-    
+    margin-bottom: 25px;
+    padding-top: 25px;
+    font-size: 24px;
   }
-  
-  @media (max-width:767px) {
-    .photo-gallery h2 {
-      margin-bottom:25px;
-      padding-top:25px;
-      font-size:24px;
-    }
-  }
-  
-  .photo-gallery .intro {
-    font-size:16px;
-    max-width:500px;
-    margin:0 auto 40px;
-  }
-  
-  .photo-gallery .intro p {
-    margin-bottom:0;
-  }
-  
-  .photo-gallery .photos {
-    padding-bottom:20px;
-}
-  
-  .photo-gallery .item {
-    padding-bottom:30px;
-  }
-
-  .contact-section {
-    padding: 50px;
-    text-align: center;
-    color: white;
-  }
-
-.img-shadow{
-    box-shadow: 2px 3px 3px #000;
-    
-}
-.ic{
-  
-    
-}
-.ic:hover{
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    -ms-border-radius: 50%;
-    -o-border-radius: 50%;
 }
 
-.marq{
-    font-size: large;
-    color: #fff;
-    letter-spacing: 2px;
-    font-family: 'Times New Roman', Times, serif;
-    font-style: bold;
-    text-shadow: 3px 3px 3px #97a9b8;
+.photo-gallery .intro {
+  font-size: 16px;
+  max-width: 500px;
+  margin: 0 auto 40px;
 }
 
-/* style for floating whatsapp icon */
-
-.float{
-	position:fixed;
-	width:60px;
-	height:60px;
-	bottom:40px;
-	right:40px;
-	background-color:#25d366;
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-  font-size:30px;
-	box-shadow: 2px 2px 3px rgb(0, 0, 0);
-  z-index:100;
+.photo-gallery .intro p {
+  margin-bottom: 0;
 }
 
-.my-float{
-	margin-top:16px;
+.photo-gallery .photos {
+  padding-bottom: 20px;
+}
+
+.photo-gallery .item {
+  padding-bottom: 30px;
+}
+
+.contact-section {
+  padding: 50px;
+  text-align: center;
+  color: white;
+}
+
+.img-shadow {
+  box-shadow: 2px 3px 3px #000;
+}
+
+.ic {}
+
+.ic:hover {
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
+.marq {
+  font-size: large;
+  color: #fff;
+  letter-spacing: 2px;
+  font-family: 'Times New Roman', Times, serif;
+  font-style: bold;
+  text-shadow: 3px 3px 3px #97a9b8;
 }
 
 /*---- style for gallery ---- */
 
-.row > .column {
-    padding: 0 8px;
-  }
-  
-  .row:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  .column {
-    float: left;
-    width: 25%;
-  }
-  
-  /* The Modal (background) */
-  .modal {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: auto;
-    background: linear-gradient(#606b7d,#2b6777);;
-  }
-  
-  /* Modal Content */
-  .modal-content {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    width: 90%;
-    max-width: 1200px;
-  }
-  
-  /* The Close Button */
-  .close {
-    color: white;
-    position: absolute;
-    top: 10px;
-    right: 25px;
-    font-size: 35px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #999;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  .mySlides {
-    display: none;
-  }
-  
-  .cursor {
-    cursor: pointer;
-  }
-  
-  /* Next & previous buttons */
-  .prev,
-  .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -50px;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
-    -webkit-transition: 0.6s ease;
-    -moz-transition: 0.6s ease;
-    -ms-transition: 0.6s ease;
-    -o-transition: 0.6s ease;
-    -webkit-border-radius: 0 3px 3px 0;
-    -moz-border-radius: 0 3px 3px 0;
-    -ms-border-radius: 0 3px 3px 0;
-    -o-border-radius: 0 3px 3px 0;
+.row>.column {
+  padding: 0 8px;
 }
-  
-  /* Position the "next button" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-    -webkit-border-radius: 3px 0 0 3px;
-    -moz-border-radius: 3px 0 0 3px;
-    -ms-border-radius: 3px 0 0 3px;
-    -o-border-radius: 3px 0 0 3px;
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover,
-  .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 16px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
-  
-  img {
-    margin-bottom: -4px;
-  }
-  
-  
-  
+
+.column {
+  float: left;
+  width: 25%;
+}
+
+/* The Modal (background) */
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+  background: linear-gradient(#606b7d, #2b6777);
+  ;
+}
+
+/* Modal Content */
+
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
+}
+
+/* The Close Button for modal */
+
+.close {
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.close:hover, .close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mySlides {
+  display: none;
+}
+
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons for modal */
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-transition: 0.6s ease;
+  -moz-transition: 0.6s ease;
+  -ms-transition: 0.6s ease;
+  -o-transition: 0.6s ease;
+  -webkit-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  -ms-border-radius: 0 3px 3px 0;
+  -o-border-radius: 0 3px 3px 0;
+}
+
+/* Position the "next button" to the right */
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+  -webkit-border-radius: 3px 0 0 3px;
+  -moz-border-radius: 3px 0 0 3px;
+  -ms-border-radius: 3px 0 0 3px;
+  -o-border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+
+.prev:hover, .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+
+.numbertext {
+  color: #f2f2f2;
+  font-size: 16px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* style for floating whatsapp icon */
+
+.float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: #25d366;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px rgb(0, 0, 0);
+  z-index: 100;
+}
+
+.my-float {
+  margin-top: 16px;
+}
+
+/* map style */
+
+.map-responsive {
+  overflow: hidden;
+  padding-bottom: 50%;
+  position: relative;
+  height: 100;
+}
+
+.map-responsive iframe {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
