--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,6 @@ body {
   height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/background.jpg");
   background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
 .content-area {
@@ -27,22 +25,19 @@ body {
   align-items: center;
 }
 
-
-
-.content  {
+.content {
   text-align: center;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 11vw;
+}
+
+.content h1 {
+  font-size: 10vh;
   color: #97a9b8;
   font-family: serif;
   text-shadow: 2px 2px 3px #2b6777;
 }
+
 .content p {
-  font-size: 4vh;
+  font-size: 3vh;
   color: #ddd;
 }
 
@@ -76,10 +71,53 @@ body {
   background-color: #c8d8e4;
 }
 
-.text{
+.text {
   color: #fff;
   text-shadow: 2px 2px 3px #2a6571;
 }
+
+.photo-gallery {
+  color:#313437;
+  background-color:#fff;
+}
+
+.photo-gallery p {
+  color:#7d8285;
+}
+
+.photo-gallery h2 {
+  font-weight:bold;
+  margin-bottom:40px;
+  padding-top:40px;
+  color:inherit;
+}
+
+@media (max-width:767px) {
+  .photo-gallery h2 {
+    margin-bottom:25px;
+    padding-top:25px;
+    font-size:24px;
+  }
+}
+
+.photo-gallery .intro {
+  font-size:16px;
+  max-width:500px;
+  margin:0 auto 40px;
+}
+
+.photo-gallery .intro p {
+  margin-bottom:0;
+}
+
+.photo-gallery .photos {
+  padding-bottom:20px;
+}
+
+.photo-gallery .item {
+  padding-bottom:30px;
+}
+/* Gallery ends */
 
 .gallery img {
   transition: all .3s ease-in-out;
@@ -175,16 +213,6 @@ body {
   font-style: bold;
   text-shadow: 3px 3px 3px #97a9b8;
 }
-
-/* aboutcard */
-
-.aboutcard {
-
-text-align: center;
-
-}
-
-
 
 /*---- style for gallery ---- */
 
@@ -346,8 +374,7 @@ text-align: center;
   position: absolute;
 }
 
-
-.cazoom{
+.cazoom {
   transition: all .3s;
   -webkit-transition: all .3s;
   -moz-transition: all .3s;
@@ -355,7 +382,7 @@ text-align: center;
   -o-transition: all .3s;
   text-decoration: none;
   font-family: 'Times New Roman', Times, serif;
-  box-shadow : 3px 3px 5px #000 ;
+  box-shadow: 3px 3px 5px #000;
 }
 
 .cazoom:hover {
@@ -367,11 +394,13 @@ text-align: center;
   text-decoration: none;
 }
 
-.carda{
+.carda {
   text-decoration: none;
 }
+/* About Card */
+.aboutCard{
+  background-color: #2b6777;
+  font-family: 'Times New Roman', Times, serif;
+  box-shadow: 3px 3px 5px #000;
 
-
-.aboutcard{
-  background: #000;
 }
