--- Auto-Git Commit ---

--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ body {
 /* About Card */
 .aboutCard{
   background: linear-gradient(#356a6f,#21696f);
-  font-family: 'Times New Roman', Times, serif;
-  box-shadow: 3px 3px 5px #000;
+  /**font-family: 'Times New Roman', Times, serif;
+  box-shadow: 3px 3px 5px #000;**/
 
 }
